fix mobile wrap problem

--- a/css/featured-image-side.scss
+++ b/css/featured-image-side.scss
@@ -36,7 +36,7 @@ $link-color: #f7a34a;
             padding: 30px;
 
             .featured-image {
-                max-width: 50%;
+                max-width: 42%;
 
                 &.float-left {
                     float: left;
